@@ -13,18 +13,19 @@ class MatTranslator implements Translator<Mat, Mat> {
 
     private final String inputLayoutNd;
     private final String outputLayoutNd;
-    private final boolean firstChannelOnly;
+    private final int nOutputChannels;
 
     /**
      * Create a translator from InstanSeg input to output.
      * @param inputLayoutNd N-dimensional output specification
      * @param outputLayoutNd N-dimensional output specification
-     * @param firstChannelOnly Should the model only be concerned with the first output channel?
+     * @param nOutputChannels Number of output channels, or -1 if unknown. One use of this is to limit the output
+     *                        to the first channel only, e.g. to detect nuclei only using a cell detection model
      */
-    MatTranslator(String inputLayoutNd, String outputLayoutNd, boolean firstChannelOnly) {
+    MatTranslator(String inputLayoutNd, String outputLayoutNd, int nOutputChannels) {
         this.inputLayoutNd = inputLayoutNd;
         this.outputLayoutNd = outputLayoutNd;
-        this.firstChannelOnly = firstChannelOnly;
+        this.nOutputChannels = nOutputChannels;
     }
 
     /**
@@ -37,7 +38,7 @@ class MatTranslator implements Translator<Mat, Mat> {
         var manager = ctx.getNDManager();
         var ndarray = DjlTools.matToNDArray(manager, input, inputLayoutNd);
         var out = new NDList(ndarray);
-        if (firstChannelOnly) {
+        if (nOutputChannels == 1) {
             var inds = new int[]{1, 0};
             var array = manager.create(inds, new Shape(2));
             var arrayCPU = array.toDevice(Device.cpu(), false);
@@ -48,7 +49,7 @@ class MatTranslator implements Translator<Mat, Mat> {
 
     @Override
     public Mat processOutput(TranslatorContext ctx, NDList list) {
-        var array = list.get(0);
+        var array = list.getFirst();
         return DjlTools.ndArrayToMat(array, outputLayoutNd);
     }
 
